Add cors and events

--- a/codefortress-demo/src/main/resources/application.yml
+++ b/codefortress-demo/src/main/resources/application.yml
@@ -29,3 +29,9 @@ codefortress:
     api:
       enabled: true
       auth-path: "/auth"
+
+    cors:
+      enabled: true
+      allowed-origins:
+        - "http://localhost:3000" # Simulamos un Frontend React
+        - "http://localhost:4200"
