--- a/codefortress-demo/src/main/resources/application.yml
+++ b/codefortress-demo/src/main/resources/application.yml
@@ -30,6 +30,11 @@ codefortress:
       enabled: true
       auth-path: "/auth"
 
+    jwt-expiration-ms: 30000 # 5 minutos (corto por seguridad)
+    refresh-token:
+      enabled: true
+      expiration-ms: 300000
+
     cors:
       enabled: true
       allowed-origins:
@@ -40,3 +45,9 @@ codefortress:
     # Esta Regex exige: Al menos 1 número, 1 minúscula, 1 mayúscula, 1 caracter especial (@#$%^&+=)
     regexp: "^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$%^&+=])(?=\\S+$).{8,}$"
     regexp-error-message: "Tu contraseña es muy debil. Debe tener Mayúsculas, Números y Simbolos."
+
+  rate-limit:
+    enabled: true
+    max-attempts: 3
+    duration-seconds: 300
+
