--- a/codefortress-demo/pom.xml
+++ b/codefortress-demo/pom.xml
@@ -4,16 +4,19 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.codefortress</groupId>
+        <groupId>dev.codefortress</groupId>
         <artifactId>codefortress-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>codefortress-demo</artifactId>
+    <properties>
+        <maven.deploy.skip>true</maven.deploy.skip>
+    </properties>
 
     <dependencies>
         <dependency>
-            <groupId>com.codefortress</groupId>
+            <groupId>dev.codefortress</groupId>
             <artifactId>codefortress-spring-boot-starter</artifactId>
             <version>${project.version}</version>
         </dependency>
