--- a/codefortress-spring-boot-starter/pom.xml
+++ b/codefortress-spring-boot-starter/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.codefortress</groupId>
+        <groupId>dev.codefortress</groupId>
         <artifactId>codefortress-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
@@ -13,17 +13,17 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.codefortress</groupId>
+            <groupId>dev.codefortress</groupId>
             <artifactId>codefortress-core</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>com.codefortress</groupId>
+            <groupId>dev.codefortress</groupId>
             <artifactId>codefortress-jpa-adapter</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>com.codefortress</groupId>
+            <groupId>dev.codefortress</groupId>
             <artifactId>codefortress-web</artifactId>
         </dependency>
         <dependency>
